tests/valid/function/top_level_direct_self_recursion_safety_gate.facet
fn loop(x: unrestricted isize) -> unrestricted isize {
  (loop x)
}

fn main() -> unrestricted isize {
  (loop 1)
}
