tests/invalid/struct/struct_usage_mismatch.facet
struct Split {
  x: affine isize,
  y: unrestricted bool
}

fn main() -> unrestricted Split {
  Split { x = 1, y = true }
}
